--- a/templates/MLP.html
+++ b/templates/MLP.html
@@ -298,7 +298,7 @@
       </div>
     </div>
 
-    <!-- Carrossel de imagens -->
+    <!-- Carrossel de Imagens -->
     <div id="carouselExample" class="carousel slide mt-5" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -335,3 +335,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
