--- a/templates/PrediçãoRedeNeural.html
+++ b/templates/PrediçãoRedeNeural.html
@@ -197,12 +197,12 @@
               <li><a class="dropdown-item" href="RedeNeuralSimples.html"><i class="fas fa-network-wired me-2"></i>Rede Neural Simples</a></li>
               <li><a class="dropdown-item" href="NLP.html"><i class="fas fa-language me-2"></i>NLP</a></li>
               <li><a class="dropdown-item" href="#"><i class="fas fa-image me-2"></i>OCR</a></li>
-              <li><a class="dropdown-item" href="#"><i class="fas fa-layer-group me-2"></i>MLP</a></li>
+              <li><a class="dropdown-item" href="MLP.html"><i class="fas fa-layer-group me-2"></i>MLP</a></li>
               <li><a class="dropdown-item" href="#"><i class="fas fa-exchange-alt me-2"></i>Transformers</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="Ajuda.html">
               <i class="fas fa-question-circle me-1"></i>Ajuda
             </a>
           </li>
