--- a/templates/SobreGrupo.html
+++ b/templates/SobreGrupo.html
@@ -162,7 +162,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="Ajuda.html">
               <i class="fas fa-question-circle me-1"></i>Ajuda
             </a>
           </li>
